

Version NEXT
============

:Released: FUTURE
:Maintainer: UNKNOWN <unknown@example.org>

Bug Fixes:

* Correct the description of the return value for
  `daemon.is_detach_process_context_required`.

  Closes: Pagure #6.

Changes:

* The test suite now relies on the test discovery feature in
  ‘unittest’. This feature is in Python version 2.7 and later.


Version 2.1.2
=============

:Released: 2016-10-26
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Additions:

* Add a README document for the code base.

Changes:

* Migrate code project hosting to Pagure.
  Record the change of homepage URL in PyPI metadata.
* Raise a warning that the ‘runner’ module is pending deprecation.
  This has been an unofficial example module from the beginning, and
  it will be removed in a future version.

Bug Fixes:

* Ensure custom types are part of the Python type hierarchy.
* Avoid a circular dependency for the version string at install time.
  Thanks to Maarten van Gompel for the reproducible test case.


Version 2.1.1
=============

:Released: 2016-01-30
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Bug Fixes:

* Default ‘initgroups’ option to False. Using ‘os.initgroups’ requires
  permission to set process GID, so this now needs to be explicitly
  requested.


Version 2.1.0
=============

:Released: 2015-11-26
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Additions:

* Add a DaemonContext option, ‘initgroups’, which specifies whether to
  set the daemon process's supplementary groups.
* Set the process groups using ‘os.initgroups’.
  Thanks to Malcolm Purvis for contributing an implementation of this
  feature.


Version 2.0.6
=============

:Released: 2015-08-30
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Changes:

* Lower dependency for ‘unittest2’, we can work with an earlier version.
* Specify development status “Production/Stable” in Trove classifiers.
* Migrate to ‘mock’ version 1.3 with corresponding API changes.

Bug Fixes:
