@@ -33,6 +33,7 @@ Additional contributors
 People who have also contributed substantial improvements:
 
 * Malcolm Purvis
+* Darek Działak
 
 
 ..
